feat: ArgumentPlayer allow lower case input